Changelog
=========


0.1.8 (unreleased)
------------------

- Avoid tracebacks when trying to render errors / empty values
  [laulaz]


0.1.7 (2020-02-25)
------------------

- Improve styles & JS : #262
  [laulaz]

- Fix Arsene 50 places fetching : #262
  [laulaz]


0.1.6 (2018-03-02)
------------------

- Handle bad results from Arsene 51 : #164
  [laulaz]


0.1.5 (2014-01-31)
------------------

- Fix translation.


0.1.4 (2014-01-30)
------------------

- View address of theatre now.
- Improve NL translation.


0.1.3 (2014-01-29)
------------------

- Add nl translation.


0.1.2 (2013-12-13)
------------------

- "Sexify" view.


0.1.1 (2013-11-28)
------------------

- Fix website of place.


0.1 (2013-11-27)
----------------

- Initial release.
  [bsuttor]