@@ -5,6 +5,9 @@ Changelog
 0.1.8 (unreleased)
 ------------------
 
+- Fix Arsene 50 events retrieval with new API
+  [laulaz]
+
 - Avoid tracebacks when trying to render errors / empty values
   [laulaz]
 
